--- a/pitch-deck.html
+++ b/pitch-deck.html
@@ -140,16 +140,7 @@
 
 	        		<span class="glyph-item mega icon-screen-desktop" aria-hidden="true"></span>
 
-		        	<h3>Proposition<br/><small><a target="_NEW" href="http://www.deutscherimkerbund.de/161-Imkerei_in_Deutschland_Zahlen_Daten_Fakten">source</a></small></h3>
-		        	<p>In Germany alone, there are over <a target="_NEW" href="http://www.deutscherimkerbund.de/160-Die_deutsche_Imkerei_auf_einen_Blick">110,000 bee-keepers.</a></p>
-		        	<p>This number is increasing as awareness of <a target="_NEW" href="https://en.wikipedia.org/wiki/Colony_collapse_disorder">Bee Colony Collapse Disorder</a> and the implication of a world with few bees strikes home with many more people.</p>
-
-		        	<div class="well">
-			        	<ul class="list-group">
-			        		<li class="list-group-item">$150.00 x 110,000: <b>$16,500,000</b><br/><em>(1% 1100, $165,000)</em></li>
-			        		<li class="list-group-item">$12.00 x 12 months x 110,000: <b>$15,840,000</b><br/><em>(1% 1100, $158,400)</em></li>
-			        	</ul>
-		        	</div>
+		        	<h3>Proposition</h3>
 
 		        </div>
 
@@ -161,34 +152,7 @@
 
 	        		<span class="glyph-item mega icon-emoticon-smile" aria-hidden="true"></span>
 
-		        	<h3>Segmentation<br/><small><a target="_NEW" href="http://www.deutscherimkerbund.de/161-Imkerei_in_Deutschland_Zahlen_Daten_Fakten">source</a></small></h3>
-
-		        	<h3>Small</h3>
-		        	<p>In Germany, 80% of beekeepers have between 1 &amp; 20 individual hives.</p>
-							<ul class="list-group">
-									<li class="list-group-item"><b>device:</b>$150.00 x 88,000: <b>$13,200,000</b><br/><em>(1% 880, $132,000)</em></li>
-									<li class="list-group-item"><b>subscription:</b>$12.00 x 12 months x 88,000: <b>$12,672,000</b><br/><em>(1% 880, $253,440)</em></li>
-									<li class="list-group-item"><b>s-pack:</b> $80.00 x 2 x 88,000: <b>$14,080,000</b><br/><em>(1% 880, $140,800)</em></li>
-									<li class="list-group-item"><b>total:</b><b>$39,952,000</b><br/><em>(1% 22, $526,240)</em></li>
-							</ul>
-
-		        	<h3>Medium</h3>
-		        	<p>while, 18% of beekeepers have between 21 &amp; 50 individual hives.</p>
-							<ul class="list-group">
-									<li class="list-group-item"><b>device:</b>$150.00 x 19,800: <b>$2,970,000</b><br/><em>(1% 198, $59,400)</em></li>
-									<li class="list-group-item"><b>subscription:</b>$24.00 x 12 months x 19,800: <b>$15,840,000</b><br/><em>(1% 198, $57,024)</em></li>
-									<li class="list-group-item"><b>s-pack:</b>$80.00 x 30 x 2,200: <b>$5,280,000</b><br/><em>(1% 198, $348,480)</em></li>
-									<li class="list-group-item"><b>total:</b><b>$24,090,000</b><br/><em>(1% 22, $464,904)</em></li>
-							</ul>
-
-		        	<h3>Large</h3>
-		        	<p>with, 2% of beekeepers with 50 or more individual hives.</p>
-							<ul class="list-group">
-									<li class="list-group-item"><b>device:</b>$150.00 x 2 x 2,200: <b>$660,000</b><br/><em>(1% 22, $6,600)</em></li>
-									<li class="list-group-item"><b>subscription:</b>$49.00 x 12 months x 2,200: <b>$1,293,600</b><br/><em>(1% 22, $12,936)</em></li>
-									<li class="list-group-item"><b>s-pack:</b>$80.00 x 80 x 2,200: <b>$14,080,000</b><br/><em>(1% 22, $140,800)</em></li>
-									<li class="list-group-item"><b>total:</b><b>$16,033,600</b><br/><em>(1% 22, $160,336)</em></li>
-							</ul>
+		        	<h3>Segmentation</h3>
 
 		        </div>
 
@@ -201,8 +165,6 @@
 	        		<span class="glyph-item mega icon-screen-smartphone" aria-hidden="true"></span>
 
 		        	<h3>Initial &amp; Ongoing Costs</h3>
-		        	<p>Development of a mobile and web based app (In-house)</p>
-		        	<p>Hardware and provisioning servers (AWS)</p>
 
 		        </div>
 
@@ -215,48 +177,12 @@
 
 	        		<span class="glyph-item mega icon-users" aria-hidden="true"></span>
 
-		        	<h3>Social &amp; Co-Operative operations</h3>
-		        	<p>Join our drive to get great locally produced honey into the global market and generate a revenue</p>
-		        	<p>The Co-oprative part of HiveEmpire also lets you get support and even concierge management of your hives, freeing you up to focus on other matters.</p>
+		        	<h3>Social &amp; Co-Operative</h3>
 
 		        </div>
 
 	    	</div>
 
-
-	    	<div class="clearfix"></div>
-
-	    </div>
-
-	</div>
-
-</div>
-
-<div class="strip highlight strip-alt">
-
-	<div class="container">
-
-        <div class="row">
-
-	    	<div class="span6">
-
-	        	<div class="inner inner-text">
-		        	<h2>Know <span>your Hive</span></h2>
-		        	<h4>The best part of bee-keeping is getting to know your hive its bees and of course the Queen</h4>
-		        	<p>HiveEmpire aims to get you even closer to this process and give you 24 hour but low-impact monitoring, thus giving your bees the space they need to do their thing but also giving you precise real-time data.</p>
-		        </div>
-
-	    	</div>
-
-	    	<div class="span6">
-
-	        	<div class="inner">
-
-		        	<img src="pictures/desktop-inline.png" alt="Desktop" class="promoimg" />
-
-		        </div>
-
-	    	</div>
 
 	    	<div class="clearfix"></div>
 
@@ -286,10 +212,101 @@
 
 	        	<div class="inner inner-text">
 
-		        	<h2>Connect <span>&amp; Engage</span></h2>
-		        	<h4>At HiveEmpire we believe in networks and connecting people.</h4>
-		        	<p>We are building a large support network and access to knowledge and resources you would normally take years to build and manage.</p>
-		        	<p>We also believe in the power of co-operative production and with your help will be leading the charge into pure honey supply into the worlds markets.</p>
+		        	<h2>Proposition/<small><a target="_NEW" href="http://www.deutscherimkerbund.de/161-Imkerei_in_Deutschland_Zahlen_Daten_Fakten">source</a></small></h2>
+		        	<p>In Germany alone, there are over <a target="_NEW" href="http://www.deutscherimkerbund.de/160-Die_deutsche_Imkerei_auf_einen_Blick">110,000 bee-keepers.</a></p>
+		        	<p>This number is increasing as awareness of <a target="_NEW" href="https://en.wikipedia.org/wiki/Colony_collapse_disorder">Bee Colony Collapse Disorder</a> and the implication of a world with few bees strikes home with many more people.</p>
+
+		        	<div class="well">
+			        	<ul class="list-group">
+			        		<li class="list-group-item">$150.00 x 110,000: <b>$16,500,000</b><br/><em>(1% 1100, $165,000)</em></li>
+			        		<li class="list-group-item">$12.00 x 12 months x 110,000: <b>$15,840,000</b><br/><em>(1% 1100, $158,400)</em></li>
+			        	</ul>
+		        	</div>
+
+
+		        </div>
+
+	    	</div>
+
+	    	<div class="clearfix"></div>
+
+	    </div>
+
+	</div>
+
+</div>
+
+
+<div class="strip highlight strip-alt">
+
+	<div class="container">
+
+        <div class="row">
+
+	        	<div class="inner inner-text">
+		        	<h2>Segmentation/<small><a target="_NEW" href="http://www.deutscherimkerbund.de/161-Imkerei_in_Deutschland_Zahlen_Daten_Fakten">source</a></small></h2>
+
+
+		        	<h3>Small</h3>
+		        	<p>In Germany, 80% of beekeepers have between 1 &amp; 20 individual hives.</p>
+							<ul class="list-group">
+									<li class="list-group-item"><b>device:</b> $150.00 x 88,000: <b>$13,200,000</b><br/><em>(1% 880, $132,000)</em></li>
+									<li class="list-group-item"><b>subscription:</b> $12.00 x 12 months x 88,000: <b>$12,672,000</b><br/><em>(1% 880, $253,440)</em></li>
+									<li class="list-group-item"><b>sensor-pack:</b> $80.00 x 2 x 88,000: <b>$14,080,000</b><br/><em>(1% 880, $140,800)</em></li>
+									<li class="list-group-item"><b>total:</b><b> $39,952,000</b><br/><em>(1% 22, $526,240)</em></li>
+							</ul>
+
+		        	<h3>Medium</h3>
+		        	<p>while, 18% of beekeepers have between 21 &amp; 50 individual hives.</p>
+							<ul class="list-group">
+									<li class="list-group-item"><b>device:</b> $150.00 x 19,800: <b>$2,970,000</b><br/><em>(1% 198, $59,400)</em></li>
+									<li class="list-group-item"><b>subscription:</b> $24.00 x 12 months x 19,800: <b>$15,840,000</b><br/><em>(1% 198, $57,024)</em></li>
+									<li class="list-group-item"><b>sensor-pack:</b> $80.00 x 30 x 2,200: <b>$5,280,000</b><br/><em>(1% 198, $348,480)</em></li>
+									<li class="list-group-item"><b>total:</b><b> $24,090,000</b><br/><em>(1% 22, $464,904)</em></li>
+							</ul>
+
+		        	<h3>Large</h3>
+		        	<p>with, 2% of beekeepers with 50 or more individual hives.</p>
+							<ul class="list-group">
+									<li class="list-group-item"><b>device:</b> $150.00 x 2 x 2,200: <b>$660,000</b><br/><em>(1% 22, $6,600)</em></li>
+									<li class="list-group-item"><b>subscription:</b> $49.00 x 12 months x 2,200: <b>$1,293,600</b><br/><em>(1% 22, $12,936)</em></li>
+									<li class="list-group-item"><b>sensor-pack:</b> $80.00 x 80 x 2,200: <b>$14,080,000</b><br/><em>(1% 22, $140,800)</em></li>
+									<li class="list-group-item"><b>total:</b><b> $16,033,600</b><br/><em>(1% 22, $160,336)</em></li>
+							</ul>
+		        </div>
+
+	    	<div class="clearfix"></div>
+
+	    </div>
+
+	</div>
+
+</div>
+
+<div class="strip highlight">
+
+	<div class="container">
+
+        <div class="row">
+
+	    	<div class="span6">
+
+	        	<div class="inner">
+
+		        	<img src="pictures/mobile-inline.png" alt="Desktop" class="promoimg" />
+
+		        </div>
+
+	    	</div>
+
+	    	<div class="span6">
+
+	        	<div class="inner inner-text">
+
+		        	<h2>Initial &amp; Ongoing <span>Costs</span></h2>
+		        	<p>Development of a mobile and web based app (In-house)</p>
+		        	<p>Hardware and provisioning servers (AWS)</p>
+
 
 		        </div>
 
@@ -314,11 +331,9 @@
 
 	        	<div class="inner inner-text">
 
-		        	<h2>Buy <span>HiveEmpire-Sense&#8482;</span></h2>
-		        	<h4>Buy one HiveEmpire-Sense&#8482; and its sensors via the starter-pack</h4>
-		        	<p>But of course you can buy replacements too.</p>
-		        	<p>Remember 1 HiveEmpire-Sense&#8482; can run as many sensors as you like (tho we do recommend a max of 50)</p>
-		        	<p>We are constantly thinking of new sensors to add to the set and are happy to take special requests</p>
+		        	<h2>Social &amp; <span>Co-Operative</span></h2>
+		        	<p>Join our drive to get great locally produced honey into the global market and generate a revenue</p>
+		        	<p>The Co-oprative part of HiveEmpire also lets you get support and even concierge management of your hives, freeing you up to focus on other matters.</p>
 
 		        </div>
 
