--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
 	        	<div class="inner">
 
-		        	<img src="pictures/desktop-inline.png" alt="Desktop" class="promoimg" />
+		        	<img src="http://www.exponito.com/static/img/tour/istick.png" alt="Desktop" class="promoimg" />
 
 		        </div>
 
