--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
 	        	<div class="inner">
 
-		        	<img src="pictures/mobile-inline.png" alt="Desktop" class="promoimg" />
+		        	<img src="https://cdn2.iconfinder.com/data/icons/business-charts/512/relations-512.png" alt="Desktop" class="promoimg" />
 
 		        </div>
 
@@ -349,7 +349,7 @@
 	    	<div class="span6">
 
 	        	<div class="inner">
-		        	<img src="pictures/mobile-inline.png" alt="Desktop" class="promoimg" />
+		        	<img src="https://www.oclc.org/content/dam/oclc/collection-evaluation/analytics-icon.png" alt="Desktop" class="promoimg" />
 		        </div>
 
 	    	</div>
