--- a/pitch-deck.html
+++ b/pitch-deck.html
@@ -94,7 +94,7 @@
 
 		        				<h2><span class="glyph-item  icon-pencil" aria-hidden="true"></span> HiveEmpire - the potentials</h2>
 		        				<p><b>The problem:</b> Is a bringing imperic data to very opaque process. And making "ownership" a tangible real-time feeling for bee-keepers who would normally have to wait weeks for feedback and results.</p>
-		        				<p><b>Our solution:</b> Bring a non-invasive, monitoring system that collects and provides data in real-time as well as expose the inner workings of the hive to bee-keepers. Enhancing the sense of ownership. As well as bringing light and difficult to acquire knowledge to an ancient passtime and providing a sense of direction which is otherwise a blocker to all new beekeepers.</p>
+		        				<p><b>Our solution:</b> By exposing the inner workings of the hive to bee-keepers we aim to enhance the sense of ownership. As well as bringing light and difficult to acquire knowledge to an ancient passtime and providing a sense of direction which is otherwise a blocker to all new beekeepers. This is accomplished by bringing a non-invasive, monitoring system that collects and provides data in real-time as well as eventually video.</p>
 		        				<p><b>Other Markets</b> There exists a potential to monetize and create a co-operative platform for the production and distribution of honey and thus tap into emerging organic locally produced oriented consumers.</p>
 
 	        				</div>
