--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 	    	<div class="span6">
 
 	        	<div class="inner">
-
+	        		<h2>Live Data</h2>
 		        	<iframe src="http://schweinhun.de/graphs/dashboard-solo/db/beekeep-sensor-roadprototype?from=1446626079174&to=1449218079175&panelId=3&fullscreen&var-device_id=00000000d390eefe" width="450" height="200" frameborder="0"></iframe>
 
 		        </div>
