--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 	        	<div class="inner">
 	        		<h2>Live Data <span>from our prototype</span></h2>
-		        	<iframe src="http://schweinhun.de/graphs/dashboard-solo/db/beekeep-sensor-roadprototype?from=1446626079174&to=1449218079175&panelId=3&fullscreen&var-device_id=00000000d390eefe" width="450" height="200" frameborder="0"></iframe>
+							<iframe src="http://schweinhun.de/graphs/dashboard-solo/db/beekeep-sensor-roadprototype?panelId=3&fullscreen&from=1448618057293&to=1449222857293" width="450" height="200" frameborder="0"></iframe>
 
 		        </div>
 
