fixed sys path and removed t and c prvacy pages

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								        <textarea name="message" id="message" required=""  placeholder="Message"></textarea>
 								    </div>
 									<div class="form-row">
-								        <input id="submit" type="submit" name="submit" value="Send" class="btn"> <a href="/">Privacy Policy</a> | <a href="/">Terms &amp; Conditions</a>
+								        <input id="submit" type="submit" name="submit" value="Send" class="btn"> <!-- <a href="/">Privacy Policy</a> | <a href="/">Terms &amp; Conditions</a> -->
 								    </div>
 								</form>
 
