--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 							<li><a href="/about.html">About</a></li>
 							<li><a href="https://hiveempireblog.wordpress.com">Blog</a></li>
 							<li><a href="/docs/">Get Started</a></li>
-							<li><a href="https://app.hive-empire.com/sign-up/">Sign Up</a></li>
-							<li><a href="https://app.hive-empire.com/sign-in/">Sign In</a></li>
+							<li><a href="http://app.hive-empire.com/sign-up/">Sign Up</a></li>
+							<li><a href="http://app.hive-empire.com/sign-in/">Sign In</a></li>
 							<li><a href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
 							<li class="current"><a href="">Download App</a></li>
 						</ul>
