added temporary signin and signup page

--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
 							<li><a href="/about.html">About</a></li>
 							<li><a href="https://hiveempireblog.wordpress.com">Blog</a></li>
 							<li><a href="/docs/">Get Started</a></li>
-							<li><a href="https://app.hive-empire.com/sign-up/">Sign Up</a></li>
-							<li><a href="https://app.hive-empire.com/sign-in/">Sign In</a></li>
+							<li><a href="http://app.hive-empire.com/sign-up.html">Sign Up</a></li>
+							<li><a href="http://app.hive-empire.com/sign-in.html">Sign In</a></li>
 							<li><a href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
 							<li class="current"><a href="">Download App</a></li>
 						</ul>
@@ -121,8 +121,8 @@
 
 	        	<div class="inner inner-text">
 		        	<h2>About <span>HiveEmpire</span></h2>
-		        	<h4>Stuff</h4>
-		        	<p>more stuff</p>
+		        	<h4>Who are we</h4>
+		        	<p>We are a collection of topic specialists who after watching</p>
 		        </div>
 
 	    	</div>
@@ -217,7 +217,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-70859032-1', 'auto');
-  ga('send', 'pageview');
+  ga('send', 'pageview', location.pathname);
 
 </script>
 
