--- a/tmp-login/sign-in.html
+++ b/tmp-login/sign-in.html
@@ -13,15 +13,15 @@
     <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
 
     <!-- Vendor styles -->
-    <link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="vendor/metisMenu/dist/metisMenu.css" />
-    <link rel="stylesheet" href="vendor/animate.css/animate.css" />
-    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="http://hive-empire.com/tmp-login/vendor/fontawesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="http://hive-empire.com/tmp-login/vendor/metisMenu/dist/metisMenu.css" />
+    <link rel="stylesheet" href="http://hive-empire.com/tmp-login/vendor/animate.css/animate.css" />
+    <link rel="stylesheet" href="http://hive-empire.com/tmp-login/vendor/bootstrap/dist/css/bootstrap.css" />
 
     <!-- App styles -->
-    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
-    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/helper.css" />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="http://hive-empire.com/tmp-login/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
+    <link rel="stylesheet" href="http://hive-empire.com/tmp-login/fonts/pe-icon-7-stroke/css/helper.css" />
+    <link rel="stylesheet" href="http://hive-empire.com/tmp-login/styles/style.css">
 
 </head>
 <body class="blank">
@@ -79,18 +79,18 @@
 
 
 <!-- Vendor scripts -->
-<script src="vendor/jquery/dist/jquery.min.js"></script>
-<script src="vendor/jquery-ui/jquery-ui.min.js"></script>
-<script src="vendor/slimScroll/jquery.slimscroll.min.js"></script>
-<script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="vendor/metisMenu/dist/metisMenu.min.js"></script>
-<script src="vendor/iCheck/icheck.min.js"></script>
-<script src="vendor/sparkline/index.js"></script>
+<script src="http://hive-empire.com/tmp-login/vendor/jquery/dist/jquery.min.js"></script>
+<script src="http://hive-empire.com/tmp-login/vendor/jquery-ui/jquery-ui.min.js"></script>
+<script src="http://hive-empire.com/tmp-login/vendor/slimScroll/jquery.slimscroll.min.js"></script>
+<script src="http://hive-empire.com/tmp-login/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="http://hive-empire.com/tmp-login/vendor/metisMenu/dist/metisMenu.min.js"></script>
+<script src="http://hive-empire.com/tmp-login/vendor/iCheck/icheck.min.js"></script>
+<script src="http://hive-empire.com/tmp-login/vendor/sparkline/index.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/parsley.js/2.1.2/parsley.min.js"></script>
 
 <!-- App scripts -->
-<script src="scripts/homer.js"></script>
+<script src="http://hive-empire.com/tmp-login/scripts/homer.js"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
