--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-<div id="wrapper">
+<div id="wrapper" class="home">
 
 	<!-- Start Header -->
 
@@ -44,14 +44,14 @@
 					<!-- Start Menu -->
 					<div id="menu">
 						<ul>
-							<li><a href="/">Home</a></li>
+							<li class="current"><a href="/">Home</a></li>
 							<li><a href="/about.html">About</a></li>
 							<li><a href="https://hiveempireblog.wordpress.com">Blog</a></li>
 							<li><a href="/docs/">Get Started</a></li>
 							<li><a href="http://app.hive-empire.com/sign-up.html">Sign Up</a></li>
 							<li><a href="http://app.hive-empire.com/sign-in.html">Sign In</a></li>
 							<li><a href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
-							<li class="current"><a href="">Download App</a></li>
+							<!-- <li class="current"><a href="">Download App</a></li> -->
 						</ul>
 					</div>
 					<!-- End Menu -->
@@ -105,23 +105,23 @@
 
 	        				<div id="container-contact-us-form" class="bottom">
 
-								<form id="contact" name="contact" data-action="http://comb-empire.com/send" method="POST" role="form" data-parsley-validate>
+										<form id="contact" name="contact" data-action="http://comb-empire.com/send" method="POST" role="form" data-parsley-validate>
 
-									<div class="form-row">
-								        <input type="text" name="from_name" id="name" size="30" value="" required="" class="text login_input"  placeholder="Your name">
-								    </div>
-									<div class="form-row">
-								        <input type="text" name="from_email" id="email" size="30" value="" required="" class="text login_input"  placeholder="Email Address">
-								    </div>
-									<div class="form-row">
-								        <textarea name="message" id="message" required=""  placeholder="Message"></textarea>
-								    </div>
-									<div class="form-row">
-								        <input id="submit" type="submit" name="submit" value="Send" class="btn"> <!-- <a href="/">Privacy Policy</a> | <a href="/">Terms &amp; Conditions</a> -->
-								    </div>
-								</form>
+											<div class="form-row">
+										        <input type="text" name="from_name" id="name" size="30" value="" required="" class="text login_input"  placeholder="Your name">
+										    </div>
+											<div class="form-row">
+										        <input type="text" name="from_email" id="email" size="30" value="" required="" class="text login_input"  placeholder="Email Address">
+										    </div>
+											<div class="form-row">
+										        <textarea name="message" id="message" required=""  placeholder="Message"></textarea>
+										    </div>
+											<div class="form-row">
+										        <input id="submit" type="submit" name="submit" value="Send" class="btn"> <!-- <a href="/">Privacy Policy</a> | <a href="/">Terms &amp; Conditions</a> -->
+										    </div>
+										</form>
 
-							</div>
+								</div>
 
 	        			</div>
 	        			<div class="shadow"></div>
