--- a/about.html
+++ b/about.html
@@ -45,13 +45,13 @@
 					<div id="menu">
 						<ul>
 							<li><a href="/">Home</a></li>
-							<li><a href="/about.html">About</a></li>
+							<li class="current"><a href="/about.html">About</a></li>
 							<li><a href="https://hiveempireblog.wordpress.com">Blog</a></li>
 							<li><a href="/docs/">Get Started</a></li>
 							<li><a href="http://app.hive-empire.com/sign-up.html">Sign Up</a></li>
 							<li><a href="http://app.hive-empire.com/sign-in.html">Sign In</a></li>
 							<li><a href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
-							<li class="current"><a href="">Download App</a></li>
+							<!-- <li class="current"><a href="">Download App</a></li> -->
 						</ul>
 					</div>
 					<!-- End Menu -->
@@ -68,41 +68,7 @@
 
 	<!-- Start Content -->
 
-		<div class="container">
 
-            <div class="row">
-
-	        	<div class="span6">
-
-	        		<div class="inner">
-
-	        			<div class="hero">
-
-	        			<h1>Know your Hive</h1>
-								<h2>Hive Empire - Complete Beehive Monitoring.</h2>
-
-						<a href="#pricing" class="btn btn-primary">Pricing</a> <a href="/docs/" class="btn btn-secondary">Get Started</a>
-
-						</div>
-
-
-	        		</div>
-
-	        	</div>
-
-	        	<div class="span6">
-
-	        		<div class="inner">
-
-	        			<div class="form-box"></div>
-
-	        		</div>
-
-	        	</div>
-
-            </div>
-
-		</div>
 
 	<!-- End content -->
 
@@ -122,7 +88,8 @@
 	        	<div class="inner inner-text">
 		        	<h2>About <span>HiveEmpire</span></h2>
 		        	<h4>Who are we</h4>
-		        	<p>We are a collection of topic specialists who after watching</p>
+		        	<p>We are a collection of technical topic specialists keen on getting involved in the beekeeping community.</p>
+		        	<p>Our aims include assisting academics gather data in this fascinating field and providing insign into the lives and processess of these fascinating creatures.</p>
 		        </div>
 
 	    	</div>
@@ -131,7 +98,7 @@
 
 	        	<div class="inner">
 
-		        	<img src="pictures/desktop-inline.png" alt="Desktop" class="promoimg" />
+		        	<!-- <img src="pictures/desktop-inline.png" alt="Desktop" class="promoimg" /> -->
 
 		        </div>
 
@@ -155,7 +122,7 @@
 
 	        	<div class="inner">
 
-		        	<img src="pictures/mobile-inline.png" alt="Desktop" class="promoimg" />
+		        	<!-- <img src="pictures/mobile-inline.png" alt="Desktop" class="promoimg" /> -->
 
 		        </div>
 
@@ -165,9 +132,25 @@
 
 	        	<div class="inner inner-text">
 
-		        	<h2>Connect <span>Us</span></h2>
-		        	<h4>More info.</h4>
-		        	<p>Some more</p>
+		        	<h2>Connect <span>with Us</span></h2>
+
+	        		<div id="container-contact-us-form" class="bottom">
+								<form id="contact" name="contact" data-action="http://comb-empire.com/send" method="POST" role="form" data-parsley-validate>
+
+									<div class="form-row">
+								        <input type="text" name="from_name" id="name" size="30" value="" required="" class="text login_input"  placeholder="Your name">
+								    </div>
+									<div class="form-row">
+								        <input type="text" name="from_email" id="email" size="30" value="" required="" class="text login_input"  placeholder="Email Address">
+								    </div>
+									<div class="form-row">
+								        <textarea name="message" id="message" required=""  placeholder="Message"></textarea>
+								    </div>
+									<div class="form-row">
+								        <input id="submit" type="submit" name="submit" value="Send" class="btn"> <!-- <a href="/">Privacy Policy</a> | <a href="/">Terms &amp; Conditions</a> -->
+								    </div>
+								</form>
+							</div>
 
 		        </div>
 
@@ -208,7 +191,73 @@
 <script src="js/scripts.js"></script>
 <script src="js/jquery.form.js"></script>
 <script src="js/jquery.validate.min.js"></script>
-<script src="js/contact.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/parsley.js/2.1.2/parsley.min.js"></script>
+
+<script id="tpl-contact-thank-you" type="text/x-handlebars-template">
+<div class="row">
+    <div class="well well-lg">
+        <div class="media feature">
+            <a class="pull-left" href="#">
+                <i class="fa fa-paper-plane-o fa-2x"></i>
+            </a>
+            <div class="media-body">
+                <h3 class="media-heading">Message Sent</h3>
+                Thanks <b>{{from_name}}</b>
+            </div>
+        </div>
+        <p>We appreciate you taking the time to send us your thoughts.</p>
+        <p>Regards,<br/><b>HiveEmpire</b></p>
+
+    </div>
+</div>
+</script>
+
+<script>
+	'use strict';
+	$(document).ready(function() {
+
+	    $('form#contact').on('submit', function ( event ) {
+	        event.preventDefault();
+	        var $form = $(this);
+	        var form_options = $(this).data();
+	        var form_data = {
+	            'subject': 'HiveEmpire - Registration of interest',
+	            'from_name': $('input[name=from_name]').val(),
+	            'from_email': $('input[name=from_email]').val(),
+	            'message': $('textarea[name=message]').val(),
+	        };
+	        $.ajax({
+	            data: JSON.stringify(form_data),
+	            dataType: 'json',
+	            contentType: "application/json",
+	            headers: {'X-App': 'hive-empire'},
+	            type: 'POST',
+	            url: form_options.action,
+	            beforeSend: function () {
+	                // disable the button
+	                $form.find('input[name=submit]').prop('disabled', true);
+	                $form.find('input[type=submit]').prop('disabled', true);
+	            },
+	            error: function ( data ) {
+	                var payload = data.responseJSON;
+	                // enable the button again
+	                $form.find('input[name=submit]').prop('disabled', false);
+	                $form.find('input[type=submit]').prop('disabled', false);
+	            },
+	            success: function ( data ) {
+	                //console.log(data)
+	                if ( data.status == 200 ) {
+	                    var source   = $("script#tpl-contact-thank-you").html();
+	                    var template = Handlebars.compile(source);
+	                    $('#container-contact-us-form').html(template(form_data));
+	                }
+	            }
+	        });
+	    });
+	});
+</script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
