--- a/index.html
+++ b/index.html
@@ -400,15 +400,41 @@
 		    	<div class="inner secondary">
 		    		<ul>
 						<li><h2>Sensor Pack</h2></li>
-						<li class="price"><h1><span>$ </span><strong>80</strong><small></small></h1></li>
+						<li class="price"><h1><span>$ </span><strong>40</strong><small></small></h1></li>
 						<li>1x Temperature &amp; Humidity Sensor</li>
 						<li>4x Weight Sensors</li>
-						<li>1x In/Out Counter</li>
-						<li>1x Camera Sensor</li>
 						</ul>
 						<a href="/" class="btn">Buy Now</a>
 		    	</div>
 		  </div>
+
+		<div class="row blocks">
+
+			<div class="span4">
+		    	<div class="inner secondary">
+		    		<ul>
+						<li><h2>In/Out Counter</h2></li>
+						<li>Counter bees as they enter or exit the hive</li>
+						<li>Coming soon</li>
+						<li class="price"><h1><span>$ </span><strong>80</strong><small></small></h1></li>
+						</ul>
+						<a href="/" class="btn">Buy Now</a>
+		    	</div>
+		  </div>
+
+			<div class="span4">
+		    	<div class="inner secondary">
+		    		<ul>
+						<li><h2>Realtime Video</h2></li>
+						<li>Camera to capture your bees as they, be bees.</li>
+						<li>Coming soon</li>
+						<li class="price"><h1><span>$ </span><strong>80</strong><small></small></h1></li>
+						</ul>
+						<a href="/" class="btn">Buy Now</a>
+		    	</div>
+		  </div>
+
+		</div>
 
 		  <div class="clearfix"></div>
 
