--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/contact.css">
 	<link rel="stylesheet" href="css/simple-line-icons.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 	<meta name="description" content="Beehive Monitoring and Sensor Service">
 	<meta name="keywords" content="bee hive sensor monitoring service">
 	<meta name="viewport" content="width=device-width">
@@ -38,7 +39,10 @@
 			<div class="row">
 				<div class="span12">
 
-					<h1><a href="/"><img src="images/logo.png" alt="Convert" /></a></h1>
+					<h1>
+					<!-- <a href="/"><img src="images/logo.png" alt="Convert" /></a> -->
+					<a href="/"><span style="font-family: 'Pacifico', cursive;color:white;font-size:1.8em;">HiveEmpire</span></a>
+					</h1>
 					<h2 class="menulink"><a href="/">Menu</a></h2>
 
 					<!-- Start Menu -->
