--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
 
 	        		<span class="glyph-item mega icon-users" aria-hidden="true"></span>
 
-		        	<h3>Sell your hive's honey co-operatively</h3>
+		        	<h3>Sell your hive's honey cooperatively</h3>
 		        	<p>Join our drive to get great locally produced honey into the global market and generate a revenue</p>
-		        	<p>The Co-oprative part of HiveEmpire also lets you get support and even concierge management of your hives, freeing you up to focus on other matters.</p>
+		        	<p>The cooperative part of HiveEmpire also lets you get support and even concierge management of your hives, freeing you up to focus on other matters.</p>
 
 		        </div>
 
