--- a/pitch-deck.html
+++ b/pitch-deck.html
@@ -22,7 +22,7 @@
 	<meta itemprop="image" content=""/> -->
 	<meta property="og:title" content="Complete Beehive Monitoring - Hive Empire"/>
 	<meta property="og:description" content="Beehive Monitoring and Sensor Service"/>
-	<meta property="og:image" content=""/>
+	<meta property="og:image" content="https://pbs.twimg.com/profile_images/671789517230084096/2JC6XicL_400x400.jpg"/>
 <!-- 	<meta name="apple-itunes-app" content="app-id=">
 	<meta name="google-play-app" content="app-id="> -->
 	<meta name="author" content="">
