--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
         </div>
         <p>We appreciate your interest in HiveEmpire.</p>
         <p>We are currently hard at work producing our v2 product and sensor set.</p>
-        <p>PLease drop us a line to express your interest and ask any questions you may have.</p>
+        <p>Please drop us a line to express your interest and ask any questions you may have.</p>
         <p>Regards,<br/><b>HiveEmpire</b></p>
 
     </div>
